#509 - POST /documents/compress fails on documents with artifacts (#510)